update: translate api definition
